--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-appwrite": "^0.7.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pager-view": "^6.7.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
